--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,69 +1,33 @@
 {
     "cSpell.words": [
-        "adicional",
-        "adicionales",
-        "Adicionales",
-        "agregar",
         "Análisis",
         "anuncios",
-        "Asegúrate",
         "botón",
-        "Botón",
-        "botones",
-        "cambiar",
-        "casilla",
-        "Casilla",
-        "casillas",
         "clic",
         "coches",
         "conjunto",
         "Construir",
-        "contenido",
-        "Contenido",
+        "Crea",
         "Creación",
         "crear",
-        "cuando",
+        "dataframe",
         "datos",
         "Datos",
-        "Detalles",
         "dispersión",
         "Dispersión",
         "Encabezado",
         "escribir",
-        "está",
         "Estados",
-        "filtrado",
-        "filtrados",
-        "Filtrados",
-        "Filtrar",
         "hacer",
-        "haya",
         "histograma",
+        "histogrma",
         "interactivo",
-        "Lógica",
-        "marcada",
-        "Máximo",
-        "menos",
         "mensaje",
-        "Mínimo",
         "mostrar",
-        "Mostrar",
-        "necesidades",
-        "ninguna",
-        "opción",
-        "Otro",
         "Precio",
-        "puedes",
-        "Puedes",
-        "según",
-        "seleccionado",
-        "Seleccione",
         "texto",
         "Unidos",
         "Vehículos",
-        "venta",
-        "verificación",
-        "visualizaciones",
-        "visualizar"
+        "venta"
     ]
 }
